--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev ",
+ "dev": "next dev -H 0.0.0.0 -p 3000",
+
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "init-admin": "ts-node scripts/init-admin.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.6",
+    "@mui/x-data-grid": "^7.22.1",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-table": "^8.20.5",
     "@tiptap/extension-table": "^2.9.1",
     "@tiptap/extension-table-cell": "^2.9.1",
     "@tiptap/extension-table-header": "^2.9.1",
@@ -36,6 +45,7 @@
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flowbite-react": "^0.10.2",
     "formidable": "^3.5.2",
     "input": "^1.0.1",
     "js-cookie": "^3.0.5",
@@ -48,6 +58,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.10",
+    "react-redux": "^9.1.2",
+    "react-select": "^5.8.2",
     "recharts": "^2.13.0",
     "shadcn-ui": "^0.9.2",
     "sweetalert2": "^11.14.4",
